# dinky.http

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DispatchUnit.hpp  HttpRequest.cpp  HttpRequest.h  HttpResponse.h  NetDispatchMgr.cpp  NetDispatchMgr.h  NetHandle.h  ServerHandle.h  Thread.cpp  Thread.h  WebApp.cpp  WebApp.h  common.h  freelist.hpp
test/: CMakeLists.txt  test.cpp
